# Project-PPChem

./: .gitignore  LICENSE.txt  README.md  acidity-basicidity.py  aromatic.py  code.py  draw3D.py  env.yml  functional_groups.py  functions.py  highlight_functional_groups.py  molecule_draw.py  nucelo-electro.py  point_groups.py  pyproject.toml  requirements.txt  stereo.py
Notebook/: Project_report.ipynb
functions/: acidity-basicidity.py  acidity.py  aromatic.py  draw2D.py  draw3D.py  functional_groups.py  highlight_functional_groups.py  molecule_draw.py  nucelo-electro.py  nucelo_electro.py  point_groups.py  stereo.py
functions/Data/: aromatic_data.py  functional_groups_data.py
src/organomind/: acidity.py  app.py  aromatic.py  cas.py  code.py  draw3D.py  functional_groups.py  highlight_functional_groups.py  nucelo_electro.py  point_groups.py  stereo.py  ui.py
src/organomind/data/: acid_base_data.py  nucleo_data.py
tests/: test_acidity.py  test_aromatic.py  test_cas.py  test_draw3D.py  test_functional_groups.py  test_highlight_functional_groups.py  test_nucleo_electro.py  test_point_groups.py  test_stereo.py
